2010-01-01  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/dcpi1_bdiv_qr.c: Add parameter ASSERTs.
	* mpn/generic/dcpi1_bdiv_q.c: Likewise.

	* tests/mpn/t-bdiv.c: Replace with unit testing code, based on t-div.c.
	Increase COUNT to 500.

	* tests/mpn/t-div.c: Avoid generating too small test operands.
	Move SB suppression limit downwards.  Increase COUNT to 200.

2009-12-31  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/tdiv_qr.c: Handle numerator/remainder overlap in MU case.

	* tests/tests.h (TESTS_REPS): New macro.
	* tests/mpz/dive.c: Use larger operands, decrease default reps, use
	TESTS_REPS.
	* tests/mpz/convert.c: Likewise.
	* tests/mpz/t-sqrtrem.c: Likewise.
	* tests/mpz/reuse: Likewise.
	* tests/mpz/t-root.c: Likewise.
	* tests/mpz/t-tdiv.c: Likewise.
	* tests/mpz/t-gcd.c: Likewise.
	* tests/mpz/t-powm.c: Likewise.

2009-12-31  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom8_sqr.c (SQR_TOOM8_MAX): Avoid overflow.
	* mpn/generic/toom6_sqr.c (SQR_TOOM6_MAX): Likewise.

	* mpn/generic/mulmod_bnm1.c: Don't mention MISUSE any more,
	simply consider UNLIKELY any unexpected size.

2009-12-31  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (speed_mpn_sbordcpi1_div_qr): New function.
	(tune_mu_div): Use it.

2009-12-30  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (tune_mu_bdiv, tune_dc_bdiv, tune_mu_div)
	(tune_dc_div): Clear global s.r to make speed functions do 2n/n.

	* tune/speed.c (routine): New entries for mpn_mu_div_qr and
	mpn_mupi_div_qr.  Allow .r parameter for mpn_sbpi1_div_qr,
	mpn_dcpi1_div_qr.
	* tune/speed.h (SPEED_ROUTINE_MPN_PI1_DIV, SPEED_ROUTINE_MPN_MU_DIV_QR)
	(SPEED_ROUTINE_MPN_MUPI_DIV_QR): Handle .r parameter.

	* tests/mpz/t-tdiv.c: Increase operands size again.

	* mpn/generic/tdiv_qr.c: Attempt to choose between DC and MU cleverer.

	* mpn/generic/tdiv_qr.c: Don't overwrite rp with unnecessary temporary
	alloc.

2009-12-29  Torbjorn Granlund  <tege@gmplib.org>
